Added simplified version of expected functionality to form.

--- a/templates/recipe_edit.j2
+++ b/templates/recipe_edit.j2
@@ -1,37 +1,52 @@
+<!DOCTYPE html>
 
 
-<form>
+<script>
+function str_format(format) {
+    let args = Array.prototype.slice.call(arguments, 1);
+    let result = format.replace(/{(\d+)}/g, function(match, number){ return typeof args[number] != undefined ? args[number] : match; });
+    return result;
+}
+
+function add_instruction(e){
+    const fieldset = e.parentNode;
+    const count = parseInt(fieldset.dataset.count) + 1;
+
+    let addition = str_format('<label for="intsruct{0}">Step {0}</label><input type="text" name="instruct{0}" />', count);
+
+    fieldset.dataset.count = count
+    fieldset.insertAdjacentHTML('beforeend', addition);
+}
+
+// Adds the required fields to parent of the action executor.
+function add_ingredient(e){
+    const fieldset = e.parentNode;
+    const count = parseInt(fieldset.dataset.count) + 1;
+
+    const addition = str_format('<fieldset><legend>Ingredient {0}</legend><label for="ingredient{0}">Ingredient</label><input type="text" name="ingredient{0}" /><label for="amount{0}">Amount</label><input type="number" name="amount{0}" /><label for="unit{0}">Measurement Unit</label><input type="option" name="unit{0}" /></fieldset>', count);
+
+    fieldset.dataset.count = count;
+    fieldset.insertAdjacentHTML('beforeend', addition);
+}
+
+</script>
+
+<form method="post">
     <label for="name">Name</label>
       <input type="text" name="name" /><!--{% if recipe %}value="{{recipe.name}}"{% endif %} />-->
 
     <label for="description">Description</label>
       <input type="text" name="description" /><!--{% if recipe %}value="{{recipe.description}}"{% endif %} />-->
 
-    <fieldset data-count="1">
+    <fieldset data-count="0">
         <legend>Ingredients</legend>
-
-        {# Make a selection based in stored ingredient names. This field searches based on inuput #}
-        <label for="ingredient#">Ingredient</label>
-          <input type="text" name="ingredient#" /><!--{% if recipe %}value="{{recipe.ingridients[i].name}}"/>{% endif %}-->
-
-        <label for="amount#">Amount</label>
-          <input type="number" name="amount#" />
-
-        {#This is a selection based field, values are predefined #}
-        <label for="unit#">Measurement Unit</label>
-          <input type="option" name="unit#" />
-
-        <input type="button" value="Add Ingredient" onclick="add_ingredient()" />
+        <input type="button" value="Add Ingredient" onclick="add_ingredient(this)" />
     </fieldset>
 
-    <fieldset data-count="1">
+    <fieldset data-count="0">
         <legend>Instructions</legend>
-
-        <label for="instruct#">Step #</label>
-          <input type="text" name="instruct#" />
-
         <input type="button" value="Add Instruction" onclick="add_instruction(this)" />
     </fieldset>
 
-    <input type="button" value="Submit" action="" />
+    <input type="submit" value="Submit" action="" />
 </form>
