--- a/templates/recipe_edit.j2
+++ b/templates/recipe_edit.j2
@@ -8,7 +8,8 @@ function str_format(format) {
     return result;
 }
 const instruct_field = '<label for="{1}{0}">{0}</label><input type="text" name="{1}{0}" />';
-const ingredient_field = '<fieldset><legend>Ingredient {0}</legend><label for="ingredient{0}">Ingredient</label><input type="text" name="ingredient{0}" /><label for="amount{0}">Amount</label><input type="number" name="amount{0}" /><label for="unit{0}">Measurement Unit</label><input type="option" name="unit{0}" /></fieldset>';
+const ingredient_field = '<fieldset><legend>Ingredient {0}</legend><label for="ingredient{0}">Ingredient</label><input type="text" name="ingredient{0}" /><label for="prep{0}">Preparation</label><input type="text" name="prep{0}" /><label for="amount{0}">Amount</label><input type="number" name="amount{0}" /><label for="unit{0}">Measurement Unit</label><input type="option" name="unit{0}" /><label for="bp_base{0}">BP Base</label><input type="checkbox" name="bp_base{0}" /><label for="bp_amount{0}">BP Amount</label><input name="bp_amount{0}" type="number" min="0" step="0.001" /></fieldset>';
+const author_field = '';
 
 function add_repeated_field(e, field){
     const fieldset = e.parentNode;
@@ -34,13 +35,23 @@ function add_repeated_field(e, field){
         <legend>Origin</legend>
 
         <label for="oAuthor">Author</label>
-          <input type="text" name="origin_author" />
-        <label for="oText">Text</label>
-          <input type="text" name="origin_text" />
-        <label for="oLocation">Location</label>
-          <input type="text" name="origin_location" />
+          <input type="text" name="oAuthor" />
+        <label for="oSource">Text</label>
+          <input type="text" name="oSource" />
+        <label for="oReference">Location</label>
+          <input type="text" name="oLocation" />
+        <label for="oType">Type</label>
+          <select name="oType">
+              <option>Publication</option>
+              <option>Website</option>
+              <option>Person</option>
+          </select>
+        <label for="oName">Name</label>
+          <input name="oName" type="text" />
         <label for="oModified">Modified</label>
-          <input type="checkbox" name="modified" />
+          <input type="checkbox" name="oModified" />
+
+        <input type="button" value="Add Author" onclick="add_repeated_field(this, author_field)" />
     </fieldset>
 
     <fieldset data-count="0" data-prefix="">
