--- a/templates/recipe_list.html.j2
+++ b/templates/recipe_list.html.j2
@@ -1,7 +1,8 @@
 {% extends 'layouts/base.html.jinja' %}
 
 {% block styles %}
-
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/recipe.css')}}" />
 {% endblock %}
 
 {% block content %}
