--- a/templates/recipe_view.html.j2
+++ b/templates/recipe_view.html.j2
@@ -1,6 +1,7 @@
 {% extends 'layouts/base.html.jinja' %}
 
 {% block styles %}
+    {{ super() }}
     <link rel="stylesheet" href="{{ url_for("static", filename="styles/recipe.css") }}" />
 {% endblock %}
 
