--- a/templates/recipe_list.html.j2
+++ b/templates/recipe_list.html.j2
@@ -3,16 +3,20 @@
 {% block styles %}
     {{ super() }}
     <link rel="stylesheet" href="{{url_for('static', filename='styles/recipe.css')}}" />
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/card.css')}}" />
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/list.css')}}" />
 {% endblock %}
 
 {% block content %}
-<ul>
+
+{# How do I make lists a reusable code while supporting custom content?#}
+<ul class="gallery">
     {% for recipe in recipes %}
-        <li>
-            <a href="{{ url_for('recipe.view_single', id = recipe.get('_id')) }}">
-                {{ recipe['title'] }}
-                {{ recipe['description'] }}
-            </a>
+        <li class="card">
+            <a href="{{ url_for('recipe.view_single', id = recipe.get('_id')) }}"></a>
+            <img src="{#{ recipe.primary_image() }#}" />
+            <p class="title">{{ recipe['title'] }}</p>
+            <p class="description">{{ recipe['description'] }}</p>{# short description#}
         </li>
     {% endfor %}
 </ul>
