--- a/templates/layouts/base.html.jinja
+++ b/templates/layouts/base.html.jinja
@@ -2,11 +2,15 @@
 
 <html>
     <head>
-        <title>Recipe Book</title>
+        <title>{% block title %}Recipe Book{% endblock %}</title>
 
         {% block styles %}
             <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}" />
             <link rel="stylesheet" href="{{ url_for('static', filename='styles/navigation.css') }}" />
+        {% endblock %}
+
+        {% block scripts %}
+            <script src="{{ url_for('static', filename='scripts/formatter.js') }}" ></script>
         {% endblock %}
     </head>
     <body>
