Added tools section to form

--- a/source/templates/recipe_edit.html.j2
+++ b/source/templates/recipe_edit.html.j2
@@ -21,6 +21,11 @@
         </fieldset>
 
         <fieldset>
+            <legend>Tools</legend>
+            <input type="button" value="Add Tool" hx-get="/forms/components/recipe_tools/1" />
+        </fieldset>
+
+        <fieldset>
             <legend>Instructions</legend>
             <input type="button" value="Add Instruction" hx-get="/forms/component/instuction/1" />
         </fieldset>
